@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-20T08:23:53Z",
+  "count" : 4,
+  "count_minmax" : [ 4, 4 ],
+  "count_prev_day_inc" : 4,
+  "count_prev_day_dec" : 0,
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_prev_day_inc" : 1,
+  "uniques_prev_day_dec" : 0
+}
