@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-16T08:20:03Z",
+  "timestamp" : "2022-04-20T08:23:53Z",
   "count_outdated" : 106,
   "uniques_outdated" : 72,
-  "count" : 133,
-  "uniques" : 92,
+  "count" : 137,
+  "uniques" : 93,
   "clones" : [
     {
       "timestamp": "2022-04-08T00:00:00Z",
@@ -53,6 +53,13 @@
       "count_minmax": [ 3, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-04-20T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
