@@ -1,6 +1,6 @@
 {
-  "count": 27,
-  "uniques": 13,
+  "count": 31,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-04-08T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2022-04-16T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-04-20T00:00:00Z",
+      "count": 4,
+      "uniques": 1
     }
   ]
 }
